$Id: Changelog.txt,v 1.175 2012/07/20 08:07:44 nanard Exp $
miniUPnP client Changelog.

2012/07/20:
  Disable HAS_IP_MREQN on DragonFly BSD

2012/06/28:
  GetUPNPUrls() now inserts scope into link-local IPv6 addresses

2012/06/23:
  More error return checks in upnpc.c
  #define MINIUPNPC_GET_SRC_ADDR enables receivedata() to get scope_id
  parseURL() now parses IPv6 addresses scope
  new parameter for miniwget() : IPv6 address scope
  increment API_VERSION to 9

2012/06/20:
  fixed CMakeLists.txt

2012/05/29
  Improvements in testminiwget.sh

VERSION 1.7 : released 2012/05/24

2012/05/01:
  Cleanup settings of CFLAGS in Makefile
  Fix signed/unsigned integer comparaisons

2012/04/20:
  Allow to specify protocol with TCP or UDP for -A option

2012/04/09:
  Only try to fetch XML description once in UPNP_GetValidIGD()
  Added -ansi flag to compilation, and fixed C++ comments to ANSI C comments.

2012/04/05:
  minor improvements to minihttptestserver.c

2012/03/15:
  upnperrors.c returns valid error string for unrecognized error codes

2012/03/08:
  make minihttptestserver listen on loopback interface instead of 0.0.0.0

2012/01/25:
  Maven installation thanks to Alexey Kuznetsov

2012/01/21:
  Replace WIN32 macro by _WIN32

2012/01/19:
  Fixes in java wrappers thanks to Alexey Kuznetsov :
    https://github.com/axet/miniupnp/tree/fix-javatest/miniupnpc
  Make and install .deb packages (python) thanks to Alexey Kuznetsov :
    https://github.com/axet/miniupnp/tree/feature-debbuild/miniupnpc

2012/01/07:
  The multicast interface can now be specified by name with IPv4.

2012/01/02:
  Install man page

2011/11/25:
  added header to Port Mappings list in upnpc.c

2011/10/09:
  Makefile : make clean now removes jnaerator generated files.
  MINIUPNPC_VERSION in miniupnpc.h (updated by make)

2011/09/12:
  added rootdescURL to UPNPUrls structure.

VERSION 1.6 : released 2011/07/25

2011/07/25:
  Update doc for version 1.6 release

2011/06/18:
  Fix for windows in miniwget.c
